# Trinity2019

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  dockerfile  instructions.txt  updated_bot_scan.bag  wait_for_build.sh
docker/: .env  docker-compose-pc.yaml  docker-compose-pi.yaml  docker-compose.yaml  docker-entrypoint.sh  dockerfile  run.sh  wait_for_core.sh
docs/: trinity_ros.md
esp/esp/: CMakeLists.txt  Makefile  README.md  common.mk  flash.sh  main.cpp  sdkconfig  sdkconfig.old
esp/esp_node/: Makefile  flash.sh  main.cpp
espStuff/: drive.h  main.ino
espStuff/main/: drive.cpp  drive.h  main.ino
kiwi-drive/: CMakeLists.txt  diff_tf.py  package.xml  pid_velocity.py  robot_control.launch
kiwi-drive/launch/: robot_control.launch
kiwi-drive/scripts/: diff_tf.py  pid_velocity.py  twist_to_motors.py
kiwi-drive/src/: joystick_drive.cpp  twist_to_motors.cpp
microcontroller_code/: encoder.cpp  flash.sh
microcontroller_code/encoders-i2c-slave/: Makefile  sdkconfig  to_pi.sh
microcontroller_code/esp_node/: drive.cpp  drive.h  esp_node.ino
misc/PCA9685-test/: Makefile  PCA9685.cpp  PCA9685.h  main.cpp
src/kiwi-drive/: CMakeLists.txt  package.xml
src/kiwi-drive/launch/: robot_control.launch
src/kiwi-drive/src/: joystick_drive.cpp  pid_velocity.cpp  twist_to_motors.cpp
src/trinity/: CMakeLists.txt  package.xml
src/trinity_pi/: CMakeLists.txt  package.xml
trinity/: CMakeLists.txt  package.xml
trinity/config/: custom_rosconsole.conf  (+11 more)
trinity_pi/: CMakeLists.txt  package.xml
trinity_stage/: CMakeLists.txt  package.xml
(+143 files in other folders)
